Basic Route Handlers for fortunes completed

--- a/public/fortune.html
+++ b/public/fortune.html
@@ -22,10 +22,12 @@
         
 
         <div class="grid grid-cols-2 gap-6 mt-10">
-            <button class="border border-green-600 text-green-600 px-6 py-3 rounded-lg text-lg">New Fortune</button>
-            <button class="border border-green-600 text-green-600 px-6 py-3 rounded-lg text-lg">Random</button>
-            <button class="border border-green-600 text-green-600 px-6 py-3 rounded-lg text-lg">Mood</button>
-            <button class="border border-green-600 text-green-600 px-6 py-3 rounded-lg text-lg">(Common Mood)</button>
+            <form class="contents">
+                <button class="border border-green-600 text-green-600 px-6 py-3 rounded-lg text-lg" formaction="/fortunes/new" formmethod="get">New Fortune</button>
+                <button class="border border-green-600 text-green-600 px-6 py-3 rounded-lg text-lg" formaction="/fortunes/random" formmethod="get">Random</button>
+                <button class="border border-green-600 text-green-600 px-6 py-3 rounded-lg text-lg" formaction="/fortunes/mood" formmethod="get">Mood</button>
+                <button class="border border-green-600 text-green-600 px-6 py-3 rounded-lg text-lg" formaction="/fortunes/mood/angry" formmethod="get">(Common Mood)</button>
+            </form>
         </div>
     </div>
 
