--- a/public/new-fortune.html
+++ b/public/new-fortune.html
@@ -9,7 +9,7 @@
 <body class="w-screen h-screen bg-gray-100 flex flex-col relative p-6 m-0 p-0">
     
     <nav class="w-full bg-white shadow-md flex items-center absolute top-0 left-0 py-3">
-        <a href="#" class="border border-green-600 text-green-600 px-6 py-3 rounded-lg ml-4">Home</a>
+        <a href="/fortunes" class="border border-green-600 text-green-600 px-6 py-3 rounded-lg ml-4">Home</a>
     </nav>
 
 
