Links added to html

--- a/public/mood.html
+++ b/public/mood.html
@@ -28,14 +28,12 @@
             </div>
         </div>
 
-
-        <div class="flex flex-col items-center mt-6">
+        <form action="/fortunes/mood/" method="get" class="mt-6">
             <label for="mood" class="text-black mb-2">Mood</label>
             <input type="text" id="mood" name="mood" class="border border-black px-4 py-2 rounded-md">
-        </div>
-
-
-        <button class="border border-green-600 text-green-600 px-6 py-3 rounded-lg text-lg mt-6">Get Fortune</button>
+            <button class="border border-green-600 text-green-600 px-6 py-3 rounded-lg text-lg mt-6">Get
+                Fortune</button>
+        </form>
     </div>
     <script src="script.js"></script>
 </body>
