Mood route not working correctly

--- a/public/fortune.html
+++ b/public/fortune.html
@@ -26,7 +26,7 @@
                 <button class="border border-green-600 text-green-600 px-6 py-3 rounded-lg text-lg" formaction="/fortunes/new" formmethod="get">New Fortune</button>
                 <button class="border border-green-600 text-green-600 px-6 py-3 rounded-lg text-lg" formaction="/fortunes/random" formmethod="get">Random</button>
                 <button class="border border-green-600 text-green-600 px-6 py-3 rounded-lg text-lg" formaction="/fortunes/mood" formmethod="get">Mood</button>
-                <button class="border border-green-600 text-green-600 px-6 py-3 rounded-lg text-lg" formaction="/fortunes/mood/angry" formmethod="get">(Common Mood)</button>
+                <button class="border border-green-600 text-green-600 px-6 py-3 rounded-lg text-lg" formaction="/fortunes/mood?mood=angry" formmethod="get">(Common Mood)</button>
             </form>
         </div>
     </div>
